--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <nav>
       <a class="logo-link" href="">Web<span class="logo-header">Studio</span></a>
       <ul class="header-nav">
-        <li><a href="">Студія</a></li>
-        <li><a href="./portfolio.html">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
+        <li><a class="link-nav current" href="">Студія</a></li>
+        <li><a class="link-nav" href="./portfolio.html">Портфоліо</a></li>
+        <li><a class="link-nav" href="">Контакти</a></li>
       </ul>
     </nav>
     <ul class = "contacts">
