--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,11 @@
   <!-- Шапка сайту -->
   <header class="page-header">
     <nav>
-      <a class="logo-link" href="/index.html">Web<span class="logo-header">Studio</span></a>
+      <a class="logo-link" href="">Web<span class="logo-header">Studio</span></a>
       <ul class="header-nav">
-        <li><a href="./index.html">Студія</a></li>
-        <li><a href="">Портфоліо</a></li>
-        <li><a href="">Контакти</a></li>
+        <li><a class="link-nav" href="./index.html">Студія</a></li>
+        <li><a class="link-nav current" href="">Портфоліо</a></li>
+        <li><a class="link-nav" href="">Контакти</a></li>
       </ul>
     </nav>
     <ul class = "contacts">
@@ -31,7 +31,7 @@
 
     <section class = "section-work">
       <h1> Приклади робіт</h1>
-      <ul>
+      <ul class="items-buttons">
         <li><button type="button" class = "button-work">Усі</button></li>
         <li><button type="button" class = "button-work">Веб-сайти</button></li>
         <li><button type="button" class = "button-work">Додатки</button></li>
